# seo-forge

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml  skill.json
.github/workflows/: ci.yml
agents/: competitor-spy.md  content-architect.md  editorial-reviewer.md  image-architect.md  keyword-hunter.md  publisher.md  quality-scorer.md  seo-optimizer.md
docs/: agent-deployment.md  mcp-tools.md
expert-forum/: forum_index.json  pipeline_state.json
expert-forum/build_logs/: seo-blog-automation_2026-04-17_05-01-59_context.json
expert-forum/candidates/: aleyda-solis.json  cyrus-shepard.json  lily-ray.json  mike-king.json  rand-fishkin.json
expert-forum/councils/: seo-blog-automation-main-council.json
expert-forum/domains/: seo-blog-automation.json
expert-forum/gap_analyses/: seo-blog-automation_2026-04-17_05-18-06.json
expert-forum/promotion_audits/: aleyda-solis.json  cyrus-shepard.json  lily-ray.json  mike-king.json  rand-fishkin.json
expert-forum/scoring_reports/: seo-blog-automation_2026-04-17_05-14-28.json  seo-blog-automation_2026-04-17_05-27-56.json  seo-blog-automation_20260417.json  (+9 more)
references/: blog-templates.md  cicd-quality-gates.md  competitor-analysis.md  content-engineering.md  deployment.md  eeat-framework.md  image-pipeline.md  keyword-research.md  link-building.md  maturity-scoring.md  performance-analytics.md  technical-seo-checklist.md  trusted-domains.md
scripts/: glm_ocr_server.py  seo_forge.py
templates/: agent-capabilities.json  blog-config.json
tests/: test_seo_forge.py
(+19 files in other folders)
